--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,6 +15,8 @@
       crossorigin="anonymous"
     />
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
     <!-- GOOGLE FONTS -->
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Caprasimo&family=Geologica&family=Poppins:wght@100;600&family=Raleway&family=Roboto+Mono:wght@500&display=swap');
