--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,11 +16,26 @@
     />
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-
+    <link rel="stylesheet" href="	https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" />
     <!-- GOOGLE FONTS -->
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Caprasimo&family=Geologica&family=Poppins:wght@100;600&family=Raleway&family=Roboto+Mono:wght@500&display=swap');
     </style>
+
+    <!-- Spliderjs -->
+    <link rel="stylesheet" href="path-to-the-file/splide.min.css">
+    <link rel="stylesheet" href="url-to-cdn/splide.min.css">
+
+    <!-- Fonts to support Material Design -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
+    <!-- Icons to support Material Design -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
     
     <title>Hungry Kolkata</title>
   </head>
